--- a/public/favicon/manifest.json
+++ b/public/favicon/manifest.json
@@ -1,7 +1,7 @@
 {
-  "name": "Supabase",
-  "short_name": "Supabase",
-  "description": "The Postgres Development Platform.",
+  "name": "Convex UI",
+  "short_name": "Convex UI",
+  "description": "A UI component library for Convex.",
   "display": "standalone",
   "theme_color": "#1C1C1C",
   "background_color": "#1C1C1C",
